more accurate min-height for catacombs to avoid footer jumping around

--- a/corpsey/static/css/midsize.less
+++ b/corpsey/static/css/midsize.less
@@ -3,6 +3,7 @@ Corpsey midsize 768
 */
 
 #catacombs {
+    min-height: 990px;
     max-width: 660px;
 }
 
