--- a/corpsey/static/css/small.less
+++ b/corpsey/static/css/small.less
@@ -5,7 +5,7 @@ Corpsey smaller
 @import 'mixins.less';
 
 #catacombs {
-    min-height: 990px;
+    min-height: 1868px;
     max-width: 300px;
 }
 .button {
